crates/rome_js_formatter/tests/specs/prettier/typescript/assignment/issue-5370.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
const durabilityMetricsSelectable: Immutable.OrderedSet<
  SomeReportingMetric,
> = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,2 +1,3 @@
-const durabilityMetricsSelectable: Immutable.OrderedSet<SomeReportingMetric> =
-  myExperienceSelectable.concat(otherDurabilityMetricsSelectable);
+const durabilityMetricsSelectable: Immutable.OrderedSet<
+  SomeReportingMetric,
+> = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);
```

# Output

```js
const durabilityMetricsSelectable: Immutable.OrderedSet<
  SomeReportingMetric,
> = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);
```


# Errors
```
error[SyntaxError]: expected a type parameter but instead found '>'
  ┌─ issue-5370.ts:3:1
  │
3 │ > = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);
  │ ^ Expected a type parameter here


```


